# fyp

./: render.yaml  session_handoff_summary.md  session_summary.md.resolved
backend/: .dockerignore  Dockerfile  db_alter.py  db_migrate_links.py  pyproject.toml  reset_db_schema.py  test_llm.py  verify_and_fix_db.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: documents.py  flashcards.py  health.py  login.py  quiz.py  routes.py  social.py  users.py  vocabulary.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: base.py  deps.py  init_db.py  session.py
backend/app/models/: document.py  flashcard.py  highlight.py  quiz.py  user.py  vocabulary.py
backend/app/schemas/: document.py  flashcard.py  highlight.py  quiz.py  response.py  social.py  user.py  vocabulary.py
backend/app/services/: llm_service.py
backend/app/utils/: storage_service.py
backend/tests/: conftest.py  test_documents.py  test_flashcards.py  test_health.py  test_login.py  test_quiz.py  test_storage_service.py  test_users.py  test_vocabulary.py
frontend/flutter_application/: pubspec.yaml
frontend/flutter_application/android/app/: build.gradle.kts  google-services.json
frontend/flutter_application/lib/: constants.dart  main.dart
frontend/flutter_application/lib/models/: document_model.dart  flashcard_model.dart  quiz_model.dart  vocabulary_model.dart
frontend/flutter_application/lib/pages/: flashcard_review_page.dart  help_page.dart  home_page.dart  login_page.dart  pdf_viewer_page.dart  profile_page.dart  quiz_taking_page.dart  (+2 more)
(+24 files in other folders)
